fixed some formatting, nav bar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
+    font-weight: 200;
     background-color: rgb(102, 116, 138);
 
 }
@@ -54,9 +54,28 @@ body {
 .imageDefault {
     max-width: 100%;
     max-height: 100%;
+    box-shadow: 0px 0px 8px rgb(0, 0, 0);
 }
 
 .imageSmall {
     max-width: 50%;
     max-height: 50%;
+}
+
+.video{
+    box-shadow: 0px 0px 8px rgb(0, 0, 0);
+    width: 50vw;
+    height: 50vh;
+}
+
+/* reformat for mobile */
+@media only screen and (max-device-width: 1024px) {
+
+    .video {
+        box-shadow: 0px 0px 8px rgb(0, 0, 0);
+        width: auto;
+        max-width: 100%;
+        height: auto;
+    }
+
 }
